  HTTP engine is now Guzzle. CurlHttpRequest and PhpHttpRequest classes were
  removed.
* Parser option enableLimitReport was deprecated. The report is now generated
  post-parse and can be included by providing 'includeDebugInfo' option
  to ParserOutput::getText. Thus, ParserOptions::enableLimitReport and
  ::getEnableLimitReport methods were deprecated.
* …

=== Deprecations in 1.38 ===
* The MWGrants class is deprecated in favor of the new GrantsInfo and
  GrantsLocalization services.
* The global functions wfReadOnly() and wfReadOnlyReason() have been
  deprecated in favor of the ReadOnlyMode service.
* PageProps::getInstance() has been deprecated. Use
  MediaWikiServices::getPageProps() instead.
* User::setOption(), deprecated since 1.35, now emits deprecation warnings.
* Linker::formatComment(), ::formatLinksInComment(), ::commentBlock() and
  revComment() were deprecated. Use the new CommentFormatter service.
* Skin::getSkinStylePath now triggers deprecation warnings. Direct string path
  should be used instead.
* DatabaseBlock::purgeExpired(), deprecated since 1.36, now emits
  deprecation warnings.
* SkinTemplate::getPersonalToolsList(), deprecated since 1.35, now emits
  deprecation warnings.
* The following methods from the User class now trigger deprecation warnings:
   - ::blockedBy
   - ::getBlockId
* Content::getParserOutput and AbstractContent::fillParserOutput
  was hard-deprecated, use ContentRenderer::getParserOutput instead.
  Extensions defining a content model should
  override ContentHandler::fillParserOutput.
* Title::newFromIDs and TitleFactory::newFromIDs have been hard deprecated.
  Use a PageSelectQueryBuilder from a PageStore instead.
* Content::getRedirectChain() and Content::getUltimateRedirectTarget() have
  been deprecated with no replacement because support for $wgMaxRedirect
  will be removed completely. See T296430 for more information.
* WikiPage::getRedirectTarget() has been deprecated. Use the equivalent