@@ -15,8 +15,6 @@ $wgAutoloadLocalClasses = [
 	'AddChangeTag' => __DIR__ . '/maintenance/addChangeTag.php',
 	'AddRFCandPMIDInterwiki' => __DIR__ . '/maintenance/addRFCandPMIDInterwiki.php',
 	'AddSite' => __DIR__ . '/maintenance/addSite.php',
-	'AjaxDispatcher' => __DIR__ . '/includes/AjaxDispatcher.php',
-	'AjaxResponse' => __DIR__ . '/includes/AjaxResponse.php',
 	'AllMessagesTablePager' => __DIR__ . '/includes/specials/pagers/AllMessagesTablePager.php',
 	'AllTrans' => __DIR__ . '/maintenance/language/alltrans.php',
 	'AlphabeticPager' => __DIR__ . '/includes/pager/AlphabeticPager.php',
