@@ -125,6 +125,7 @@ class LogPage {
 		if ( $this->updateRecentChanges ) {
 			$titleObj = SpecialPage::getTitleFor( 'Log', $this->type );
 
+			// @phan-suppress-next-line SecurityCheck-DoubleEscaped
 			RecentChange::notifyLog(
 				$now, $titleObj, $this->performer, $this->getRcComment(), '',
 				$this->type, $this->action, $this->target, $this->comment,
@@ -136,9 +137,10 @@ class LogPage {
 				return $newId;
 			}
 
-			# Notify external application via UDP.
-			# We send this to IRC but do not want to add it the RC table.
+			// Notify external application via UDP.
+			// We send this to IRC but do not want to add it the RC table.
 			$titleObj = SpecialPage::getTitleFor( 'Log', $this->type );
+			// @phan-suppress-next-line SecurityCheck-DoubleEscaped
 			$rc = RecentChange::newLogEntry(
 				$now, $titleObj, $this->performer, $this->getRcComment(), '',
 				$this->type, $this->action, $this->target, $this->comment,
@@ -255,6 +257,7 @@ class LogPage {
 				$titleLink = self::getTitleLink( $title, $langObjOrNull );
 
 				if ( count( $params ) == 0 ) {
+					// @phan-suppress-next-line SecurityCheck-XSS
 					$rv = wfMessage( $wgLogActions[$key] )->rawParams( $titleLink )
 						->inLanguage( $langObj )->escaped();
 				} else {
@@ -360,6 +363,7 @@ class LogPage {
 
 		$this->performer = $performer;
 
+		// @phan-suppress-next-line SecurityCheck-DoubleEscaped
 		$logEntry = new ManualLogEntry( $this->type, $action );
 		$logEntry->setTarget( $target );
 		$logEntry->setPerformer( $performer );
